tests/parser/positive/let_and_return.nv
fn main() : void {
    let x : int = 1;
    return;
}
