tests/parser/negative/missing_type_in_let.nv
fn main() : void {
    let x : = 1;
    return;
}
